# embedded_linux_pratice

./: link.txt  readme.md
01/: Makefile  readme.md
01/app/: main.c
02/: Makefile  filestat.c  readme.md
03/sub_01/: Makefile  readme.md
07/: Makefile
08/: Makefile
10/: .gitignore  Makefile
11/: .gitignore  Makefile  hello.c
12/: .gitignore  Makefile  device_tree.dtb  device_tree.dts  temperature.c
doc/: mindmap.xmind
project/system_monitoring/: .gitignore  CMakeLists.txt
project/system_monitoring/src/: main.cpp
project/system_monitoring/src/controller/: controller.cpp  controller.h
project/system_monitoring/src/model/: factory.cpp  factory.h  model.cpp  model.h  model.hpp
project/system_monitoring/src/model/cpu/: cpu.cpp  cpu.h  cpu.hpp  cpu_common.h
project/system_monitoring/src/model/disk/: disk.cpp  disk.h  disk.hpp  disk_common.h
project/system_monitoring/src/model/mem/: mem.cpp  mem.h  mem.hpp  mem_common.h
project/system_monitoring/src/model/system/: system.cpp  system.h  system.hpp  system_common.h
project/system_monitoring/src/ultils/: gaugewidget.cpp  gaugewidget.h
project/system_monitoring/src/view/: view.cpp  view.h  view.ui
project/system_monitoring/test/: Makefile
project/system_monitoring/test/fb_test/: fb_test  fb_test.c  fb_test.sh
project/system_monitoring/test/model/: test_model.cpp
project/system_monitoring/test/model/cpu/: test_cpu.cpp
project/system_monitoring/test/model/disk/: test_disk.cpp
project/system_monitoring/test/model/mem/: test_mem.cpp
project/system_monitoring/test/model/system/: test_system.cpp
project/system_monitoring/test/output/: test_disk
(+116 files in other folders)
